--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>Sitio de Prueba</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<header>
+		<h1>Sitio de Prueba</h1>
+		<nav>
+			<ul>
+				<li><a href="#">Inicio</a></li>
+				<li><a href="#">Acerca de</a></li>
+				<li><a href="#">Contacto</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<section>
+			<h2>Sección 1</h2>
+			<p>Texto de la sección 1.</p>
+		</section>
+		<section>
+			<h2>Sección 2</h2>
+			<p>Texto de la sección 2.</p>
+		</section>
+	</main>
+	<footer>
+		<p>Derechos de autor © 2023 - Mi sitio web</p>
+	</footer>
+</body>
+</html>
