--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 	<main>
 		<section>
 			<h2>Sección 1</h2>
-			<p>Texto de la sección 1.</p>
+			<p>Me gusta la pizza.</p>
 		</section>
 		<section>
 			<h2>Sección 2</h2>
-			<p>Texto de la sección 2.</p>
+			<p>Y el flan me encanta tambien.</p>
 		</section>
 	</main>
 	<footer>
-		<p>Derechos de autor © 2023 - Mi sitio web</p>
+		<p>Derechos de autor © 2023 - no deberia decir mucho</p>
 	</footer>
 </body>
 </html>
