--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Sitio de Prueba</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" type="text/css" href="test.css">
 </head>
 <body>
 	<header>
@@ -19,7 +19,7 @@
 	</header>
 	<main>
 		<section>
-			<h2>Sección 1</h2>
+			<h2>Que es Cardano</h2>
 			<p>Me gusta la pizza.</p>
 		</section>
 		<section>
