--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<main>
 		<section>
 			<h2>Que es Cardano</h2>
-			<p>Me gusta la pizza.</p>
+			<p>Cardano es una plataforma pública de Blockchain descentralizada, que tiene una amplia comunidad que la respalda al estar desarrollada como Open Source (fuente abierta). Es una red de cadena de bloques con un mecanismo de consenso de prueba de participación (Proof of Stake).</p>
 		</section>
 		<section>
 			<h2>Sección 2</h2>
