--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
 			<h2>Que son las DLT</h2>
 			<p>Distributed Ledger Technology (DLT) o Tecnología de Contabilidad Distribuida es un sistema electrónico o base de datos 
                            para registrar información que no es ejecutada por una sola entidad. Esta nos permiten almacenar y usar datos que pueden 
-                           ser descentralizados y distribuidos tanto de forma privada o pública  
-                           </p>
+                           ser descentralizados y distribuidos tanto de forma privada o pública. </p>
 		</section>
 		<section>
 			<h2>Que es Cardano</h2>
 			<p>Cardano es una plataforma pública de Blockchain descentralizada, que tiene una amplia comunidad
                            que la respalda al estar desarrollada como Open Source (fuente abierta). Es una red de cadena de bloques
-                          con un mecanismo de consenso de prueba de participación (Proof of Stake).</p>
+                          con un mecanismo de consenso de prueba de participación (Proof of Stake). </p>
 		</section>
 	</main>
 	<footer>
