--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 			</ul>
 		</nav>
 	</header>
+<section id="acerca-de">
+  <h2>Acerca de</h2>
+  <p>Estamos probando la construcción del sitio</p>
+</section>
+
 	<main>
 		<section>
 			<h2>Que son las DLT</h2>
