--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
                            que la respalda al estar desarrollada como Open Source (fuente abierta). Es una red de cadena de bloques
                           con un mecanismo de consenso de prueba de participación (Proof of Stake). </p>
 		</section>
+
+<section id="Inicio">
+  <h2>Acerca de</h2>
+  <p>Deberia estar al principio </p>
+</section>
 	</main>
 	<footer>
 		<p>Derechos de autor © 2023 - no deberia decir mucho</p>
