--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
 		<h1>Sitio de Prueba</h1>
 		<nav>
 			<ul>
-				<li><a href="#">Inicio</a></li>
+				<li><a href="inicio.html">Inicio</a></li>
 				<li><a href="#">Acerca de</a></li>
 				<li><a href="#">Contacto</a></li>
+                               
 			</ul>
 		</nav>
 	</header>
-<section id="acerca-de">
-  <h2>Acerca de</h2>
-  <p>Estamos probando la construcción del sitio</p>
-</section>
+
 
 	<main>
 		<section>
@@ -36,10 +34,7 @@
                           con un mecanismo de consenso de prueba de participación (Proof of Stake). </p>
 		</section>
 
-<section id="Inicio">
-  <h2>Acerca de</h2>
-  <p>Deberia estar al principio </p>
-</section>
+
 	</main>
 	<footer>
 		<p>Derechos de autor © 2023 - no deberia decir mucho</p>
