--- a/Inicio.html
+++ b/Inicio.html
@@ -1,1 +1,30 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Inicio - Sitio de pruebas </title>
+    <link rel="stylesheet" type="text/css" href="test.css">
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="#"><img src="logo-indigo.png" alt="Logo de Indigo Protocol"></a>
+        <ul>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Acerca de</a></li>
+          <li><a href="#">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="contenedor">
+        <h1 class="titulo">Bienvenido a mi sitio web</h1>
+        <p class="descripcion">Aquí encontrarás información interesante sobre temas variados.</p>
+      </div>
+    </main>
+    <footer>
+      <p>Derechos reservados © 2023 - Mi sitio web</p>
+    </footer>
+  </body>
+</html>
