--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<h1>Sitio de Prueba</h1>
 		<nav>
 			<ul>
-				<li><a href="Inicio.html">Inicio</a></li>
+				<li><a href="inicio.html">Inicio</a></li> 
 				<li><a href="#">Acerca de</a></li>
 				<li><a href="#">Contacto</a></li>
                                
