--- a/Inicio.html
+++ b/Inicio.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <title>Inicio - Sitio de pruebas </title>
     <link rel="stylesheet" type="text/css" href="test.css"> 
+
+<a href="inicio.html">inicio</a>
+
   </head>
   <body>
     <header>
