--- a/inicio.html
+++ b/inicio.html
@@ -23,7 +23,10 @@
     <main>
       <div class="contenedor">
         <h1 class="titulo">Bienvenido a mi sitio web</h1>
-        <p class="descripcion">Aquí encontrarás información interesante sobre temas variados.</p>
+        <p class="descripcion">Es cierto, en muchas ocasiones, aprender algo nuevo puede ser costoso, ya que implica invertir 
+           en lecciones, libros y otros materiales de estudio. Sin embargo, con la llegada de Internet y la tecnología, la educación se ha
+           vuelto mucho más accesible para todos, y esto ha permitido que personas como tú puedan adquirir nuevos conocimientos y habilidades de forma 
+           autodidacta..</p>
       </div>
     </main>
     <footer>
