--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Sitio de Prueba</title>
+	<title>Sitio de Prueba CHIL</title>
+        <a href="#"><img src="moai.png" alt="CHILE STAKE PO"></a>
 	<link rel="stylesheet" type="text/css" href="test.css">
 </head>
 <body>
