--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Sitio de Prueba CHIL</title>
-        <a href="#"><img src="moai.png" alt="CHILE STAKE PO"></a>
+        <a href="index.html"><img src="moai.png" alt="CHILE STAKE PO"></a>
 	<link rel="stylesheet" type="text/css" href="test.css">
 </head>
 <body>
