--- a/inicio.html
+++ b/inicio.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <nav>
-        <a href="#"><img src="moai.png" alt="Logo de CHIL"></a>
+        <a href="index.html"><a href="#"><img src="moai.png" alt="Logo de CHIL"></a>
         <ul>
           <li><a href="#">Inicio</a></li>
           <li><a href="#">Acerca de</a></li>
