--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<nav>
 			<ul>
 				<li><a href="inicio.html">Inicio</a></li> 
-				<li><a href="#">Acerca de</a></li>
+				<li><a href="acercade.html">Acerca de</a></li>
 				<li><a href="#">Contacto</a></li>
                                
 			</ul>
