--- a/acercade.html
+++ b/acercade.html
@@ -6,16 +6,15 @@
     <title>Inicio - Sitio de pruebas </title>
     <link rel="stylesheet" type="text/css" href="test.css"> 
 
-<a href="inicio.html">inicio</a>
 
   </head>
   <body>
     <header>
       <nav>
-        <a href="index.html"><a href="#"><img src="moai.png" alt="Logo de CHIL"></a>
+        <a href="index.html"><a href="index.html"><img src="moai.png" alt="Logo de CHIL"></a>
         <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Acerca de</a></li>
+          <li><a href="inicio.html">Inicio</a></li>
+          <li><a href="acercade.html">Acerca de</a></li>
           <li><a href="#">Contacto</a></li>
         </ul>
       </nav>
