--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			<ul>
 				<li><a href="inicio.html">Inicio</a></li> 
 				<li><a href="acercade.html">Acerca de</a></li>
-				<li><a href="#">Contacto</a></li>
-                               
+				<li><a href="contenido.html">Contenido</a></li>
+                                <li><a href="#">Contacto</a></li>
 			</ul>
 		</nav>
 	</header>
