--- a/contenido.html
+++ b/contenido.html
@@ -1,14 +1,25 @@
-<header>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Inicio - Sitio de pruebas </title>
+    <link rel="stylesheet" type="text/css" href="test.css"> 
 
-  <div class="logo">
-    <a href="index.html"><img src="moai.png" 
-  </div>
-  <div class="navbar">
-    <ul>
-      <li><a href="inicio.html">Inicio</a></li>
-      <li><a href="acerca.html">Acerca</a></li>
-      <li><a href="contacto.html">Contacto</a></li>
-    </ul>
+
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="index.html"><a href="index.html"><img src="moai.png" alt="Logo de CHIL"></a>
+        <ul>
+          <li><a href="inicio.html">Inicio</a></li>
+          <li><a href="acercade.html">Acerca de</a></li>
+          <li><a href="#">Contacto</a></li>
+          <li><a href="contenido.html">Contenido</a></li>
+        </ul>
+      </nav>
+    </header>
+
   </div>
   <div class="contenido">
     <h2>Contenido</h2>
