--- a/index.html
+++ b/index.html
@@ -40,5 +40,14 @@
 	<footer>
 		<p>Derechos de autor © 2023 - no deberia decir mucho</p>
 	</footer>
+<div class="logos-bar">
+  <marquee behavior="scroll" direction="left">
+    <img src="logo1.png" alt="Logo 1">
+    <img src="logo2.png" alt="Logo 2">
+    <img src="logo3.png" alt="Logo 3">
+    <img src="logo4.png" alt="Logo 4">
+  </marquee>
+</div>
+
 </body>
 </html>
