--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 	</footer>
 <div class="logos-bar">
   <marquee behavior="scroll" direction="left">
-    <img src="logo1.png" alt="Logo 1">
-    <img src="logo2.png" alt="Logo 2">
-    <img src="logo3.png" alt="Logo 3">
-    <img src="logo4.png" alt="Logo 4">
+    <a href="https://atalaprism.io/"><img src="logo1.png" alt="Logo 1">
+    <a href="https://emurgo.io/"><img src="logo2.png" alt="Logo 2">
+    <a href="https://pioneers.marlowe-finance.io/"><img src="logo3.png" alt="Logo 3">
+    <a href="https://beefchain.io/"><img src="logo4.png" alt="Logo 4">
   </marquee>
 </div>
 
