--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 </html>
 <div class="logos-bar">
   <marquee behavior="scroll" direction="left">
-    <a href="https://atalaprism.io/"><img src="logo1.png" alt="Logo 1">
-    <a href="https://emurgo.io/"><img src="logo2.png" alt="Logo 2">
-    <a href="https://pioneers.marlowe-finance.io/"><img src="logo3.png" alt="Logo 3">
-    <a href="https://beefchain.io/"><img src="logo4.png" alt="Logo 4">
+    <a href="https://atalaprism.io/"><img src="logo1.png" alt="Logo 1"> width="10"></a>
+    <a href="https://emurgo.io/"><img src="logo2.png" alt="Logo 2"> width="10"></a>
+    <a href="https://pioneers.marlowe-finance.io/"><img src="logo3.png" alt="Logo 3"> width="10"></a>
+    <a href="https://beefchain.io/"><img src="logo4.png" alt="Logo 4"> width="10"></a>
   </marquee>
 </div>
