--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
 	<footer>
 		<p>Derechos de autor © 2023 - no deberia decir mucho</p>
 	</footer>
+<div class="logos-bar">
+  <marquee behavior="scroll" direction="left">
+    <a href="https://atalaprism.io/"><img src="logo1.png" alt="Logo 1"> 
+    <a href="https://emurgo.io/"><img src="logo2.png" alt="Logo 2"> 
+    <a href="https://pioneers.marlowe-finance.io/"><img src="logo3.png" alt="Logo 3"> 
+    <a href="https://beefchain.io/"><img src="logo4.png" alt="Logo 4"> 
+  </marquee>
+</div>
 
 </body>
 </html>
