--- a/contenido.html
+++ b/contenido.html
@@ -25,11 +25,12 @@
     <h2>Contenido</h2>
     <div class="barra-lateral">
       <ul>
-        <li><a href="#">Tema 1</a></li>
+        <li><a href="coingecko.html">coingecko</a></li>
         <li><a href="#">Tema 2</a></li>
         <li><a href="#">Tema 3</a></li>
       </ul>
     </div>
+
     <div class="contenido-principal">
       <!-- Aquí va el contenido principal -->
     </div>
