--- a/coingecko.html
+++ b/coingecko.html
@@ -20,6 +20,7 @@
         </ul>
       </nav>
     </header>
+<script src="script.js"></script>
 
 <div class="section" id="section1">
   <h2>Contenido</h2>
