--- a/coingecko.html
+++ b/coingecko.html
@@ -1,17 +1,14 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Inicio - Sitio de pruebas </title>
     <link rel="stylesheet" type="text/css" href="test.css"> 
-
-
   </head>
   <body>
     <header>
       <nav>
-        <a href="index.html"><a href="index.html"><img src="moai.png" alt="Logo de CHIL"></a>
+        <a href="index.html"><img src="moai.png" alt="Logo de CHIL"></a>
         <ul>
           <li><a href="inicio.html">Inicio</a></li>
           <li><a href="acercade.html">Acerca de</a></li>
@@ -20,11 +17,13 @@
         </ul>
       </nav>
     </header>
-<script src="script.js"></script>
 
-<div class="section" id="section1">
-  <h2>Contenido</h2>
-  <p>Aquí puedes ver el APY de Coingecko:</p>
-  <canvas id="apy-chart"></canvas>
-</div>
-<script src="script.js"></script>
+    <div class="section" id="section1">
+      <h2>Contenido</h2>
+      <p>Aquí puedes ver el APY de Coingecko:</p>
+      <canvas id="apy-chart"></canvas>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
+</html>
