--- a/coingecko.html
+++ b/coingecko.html
@@ -24,6 +24,13 @@
       <canvas id="apy-chart"></canvas>
     </div>
 
+    <div class="section" id="section2">
+      <h2>Precio actual de BTC</h2>
+      <p>Aquí puedes ver el precio actual de BTC:</p>
+      <div id="btc-price"></div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
+
