--- a/coingecko.html
+++ b/coingecko.html
@@ -30,7 +30,12 @@
       <div id="btc-price"></div>
     </div>
 
+    <div class="section" id="section3">
+      <h2>Ejemplo de gráfico de barras</h2>
+      <canvas id="myChart"></canvas>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
-
