--- a/coingecko.html
+++ b/coingecko.html
@@ -28,11 +28,14 @@
       <h2>Precio actual de BTC</h2>
       <p>Aquí puedes ver el precio actual de BTC:</p>
       <div id="btc-price"></div>
+      <canvas id="btc-chart"></canvas>
     </div>
 
     <div class="section" id="section3">
-      <h2>Ejemplo de gráfico de barras</h2>
-      <canvas id="myChart"></canvas>
+      <h2>Precio actual de Cardano</h2>
+      <p>Aquí puedes ver el precio actual de Cardano:</p>
+      <div id="cardano-price"></div>
+      <canvas id="cardano-chart"></canvas>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
