--- a/contenido.html
+++ b/contenido.html
@@ -4,8 +4,6 @@
     <meta charset="utf-8">
     <title>Inicio - Sitio de pruebas </title>
     <link rel="stylesheet" type="text/css" href="test.css"> 
-
-
   </head>
   <body>
     <header>
@@ -20,28 +18,28 @@
       </nav>
     </header>
 
-  </div>
-  <div class="contenido">
-    <h2>Contenido</h2>
-    <div class="barra-lateral">
-      <ul>
-        <li><a href="coingecko.html">coingecko</a></li>
-        <li><a href="#">Tema 2</a></li>
-        <li><a href="#">Tema 3</a></li>
-      </ul>
+    <div class="contenido">
+      <h2>Contenido</h2>
+      <div class="barra-lateral">
+        <ul>
+          <li><a href="coingecko.html">coingecko</a></li>
+          <li><a href="#">Tema 2</a></li>
+          <li><a href="#">Tema 3</a></li>
+        </ul>
+      </div>
+
+      <div class="contenido-principal">
+        <!-- Aquí va el contenido principal -->
+      </div>
     </div>
 
-    <div class="contenido-principal">
-      <!-- Aquí va el contenido principal -->
+    <div class="logos-bar">
+      <marquee behavior="scroll" direction="left">
+        <a href="https://atalaprism.io/"><img src="logo1.png" alt="Logo 1"> 
+        <a href="https://emurgo.io/"><img src="logo2.png" alt="Logo 2"> 
+        <a href="https://pioneers.marlowe-finance.io/"><img src="logo3.png" alt="Logo 3"> 
+        <a href="https://beefchain.io/"><img src="logo4.png" alt="Logo 4"> 
+      </marquee>
     </div>
-  </div>
-</header>
-
-<div class="logos-bar">
-  <marquee behavior="scroll" direction="left">
-    <a href="https://atalaprism.io/"><img src="logo1.png" alt="Logo 1"> 
-    <a href="https://emurgo.io/"><img src="logo2.png" alt="Logo 2"> 
-    <a href="https://pioneers.marlowe-finance.io/"><img src="logo3.png" alt="Logo 3"> 
-    <a href="https://beefchain.io/"><img src="logo4.png" alt="Logo 4"> 
-  </marquee>
-</div>
+  </body>
+</html>
