--- a/coingecko.html
+++ b/coingecko.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Inicio - Sitio de pruebas</title>
     <link rel="stylesheet" type="text/css" href="test.css"> 
-    <!-- Agrega las librerías de TradingView y jQuery -->
-    <script type="text/javascript" src=""></script>
+    <!-- Agrega la librería ligera de TradingView y jQuery -->
+    <script type="text/javascript" src="https://unpkg.com/lightweight-charts@3.0.4/dist/lightweight-charts.standalone.production.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
